# MyNutri

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_foods_v1_per_basis.py  0003_diary_meal_type.py  0004_principal_expand.py  0005_principal_backfill.py  0006_principal_contract.py  0007_food_quality_expand.py  0008_food_groups_expand.py  0009_legacy_target_transition_expand.py  0010_target_plan_expand.py  0011_diary_snapshot_v2_expand.py  0012_v2_principal_auth_expand.py  0013_v2_shared_food_catalog.py  0014_v2_food_taxonomy.py
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: router.py
backend/app/core/: auth.py  calendar.py  config.py  jwks.py
backend/app/db/: preflight.py  session.py
backend/app/nutrition_rules/: __init__.py  calculation.py  manifest.py  policies.py  registry.py  rules_manifest.lock.json  versions.py
backend/app/ops/: __init__.py  bootstrap_admin.py  provision_principal.py  (+1 more)
backend/scripts/: e2e_supabase_auth.py  import_foods_batch_001.py
backend/tests/: test_calc.py  test_calendar_authority.py  test_diary_aggregation.py  test_diary_snapshot.py  test_diary_snapshot_concurrency.py  test_diary_snapshot_v2.py  test_foods.py  test_foods_batch_import.py  test_jwks.py  test_nutrition_quality.py  test_principal_migrations.py  test_principal_security.py  test_rules_registry_api.py  test_sync.py  test_target_plans.py  test_v2_admin_bootstrap.py
docs/: 1-SYSTEM-PLAN.md  (+5 more)
(+284 files in other folders)
