[project]
name = "mynutri-backend"
version = "0.1.0"
description = "FastAPI backend for the myNutri personal nutrition tracker."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.116.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.1.0",
  "sqlmodel>=0.0.24",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["migration: requires a disposable PostgreSQL database"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.setuptools.package-data]
"app.nutrition_rules" = ["*.json"]
